exercise7/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    tier: client
spec:
  containers:
    - name: ubuntu-pod
      image: virtualhops/ato-ubuntu:latest
