exercise7/dev-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-dev
  labels:
    tier: dev
spec:
  containers:
    - name: ubuntu-pod
      image: virtualhops/ato-ubuntu:latest
