exercise7/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server
  labels:
    tier: server
spec:
  containers:
    - name: web-pod
      image: savvythru/web-app-qa
      ports:
      - containerPort: 80
