exercise7/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: open-port-80-only
spec:
  podSelector:
    matchLabels:
      tier: server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: prod
    ports:
    - protocol: TCP
      port: 80
